Fixed: nobtn눌렀을때, app.css overflow

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 * {
-  white-space: pre-wrap;
+  overflow: hidden;
 }
 
 .App {
